installs mongoose to handle database

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "mongoose": "^4.4.2"
   },
   "devDependencies": {
     "gulp-sass": "^2.2.0",
