--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.13.4",
     "gulp": "^3.9.1",
-    "mongoose": "^4.4.2"
+    "mongodb": "^2.1.7",
+    "mongoose": "^4.4.2",
+    "pg-promise": "^3.1.6"
   },
   "devDependencies": {
     "gulp-sass": "^2.2.0",
