--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "mongodb": "^2.1.7",
-    "mongoose": "^4.4.2",
+    "mongoose": "^4.4.3",
     "pg-promise": "^3.1.6"
   },
   "devDependencies": {
