--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
     "bootstrap": "^3.3.6",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "gulp": "^3.9.1",
     "mongodb": "^2.1.7",
     "mongoose": "^4.4.3",
