--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "pg-promise": "^3.1.6"
   },
   "devDependencies": {
+    "gulp-connect": "^2.3.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "sass": "^0.5.0"
   }
