--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-modal-service": "^0.6.10",
     "angular-xeditable-npm": "^0.1.9",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.2",
